# opencalphad

./: .gitignore  CMakeLists.txt  KLiTh-K=Th-1000-y.csv  KLiTh-Li=Th-1000-y.csv  Makefile  Makefile+getkey  Makefile+getkey+tinyfd  Makefile-MacOS  Makefile-mini  Makefile-nogetkey  Makefile-parallel  Makefile-sequential  Makefile-simple  Makefile.am  Makefile_Claude  Makefile_MacOS  Makefile_MacOS_old  README.md  build_configure  changes.txt  configure.ac.1  linkmake  linkmake+tinyfd  linkmake-notinyfd  linkmake.txt  linkoc  linkocdate.F90  linkpara  linkpara+tinyfd  linkpara-notinyfd  linkpara.txt  makeocasilib  news-oc2.tex  oc6P  ochelp.hlp  ochelp.tex  pmain1-save.F90  pmain1.F90  readme-general.tex  readme.tex  (+1 more)
.github/workflows/: msys2-build-and-release.yml  ubuntu-build-and-release.yml
OCisoCbinding/: CMakeLists.txt  liboctq.F90  liboctqisoc.F90  octqc.h
OCisoCbinding/cxx/: CMakeLists.txt  ocasiintf.h
OCisoCbinding/pyOC/: example.ipynb  example.py  pyOC.f90  pyOC.py  pyOCUnitTest.py
OCisoCbinding/testing/: main.cpp
TQ3lib-clean/: Makefile  liboctq.F90  readme.txt
TQ3lib-clean/isoC-Sigli/: Example_TQ.cpp  cost507ss.TDB  input.txt  liboctq.F90  liboctqisoc.F90  linkex7.txt  linkpm.txt  readme.txt  tqintf.cpp  tqintf.h
TQ3lib-clean/isoC-Teslos/: FENI.TDB  Makefile  feni-tqiso.c  liboctq.F90  liboctqisoc.F90  linkiso1.txt
TQ3lib-clean/isoC-matthias/: Makefile  liboctqisoc.F90  linkmake.txt  linkpara.txt  readme.txt  tqintf.h
TQ4lib/: liboctq.F90  readme.tex  readme.txt
TQ4lib/Cpp/: Makefile  ftinyopen-dummy.F90  liboctq.F90
TQ4lib/F90/: liboctq.F90
TQlib/: Makefile  comptq.txt  liboctq.F90  liboctqc.F90  linktest.txt  octqc.h  readme.txt  testtq.F90  tqlib.F90
TQlib/C/: liboctqc.F90  liboctqisoc.F90  test.F90
TQlib/Cython/: octqd.h  pyoctq.c  pyoctq.h  pyoctq.pxd  pyoctq.pyx  setup.py  test_pyoctq.py
doc/manual/: ochelp.html  ochelp.tex
documentation/: Getting-started.tex  gtp3.tex  gtp3.toc  makedok4.F90  matsmin2.tex  minpack5.tex  minpack5.toc  news-OC3.tex  ochelp3.tex  stepmapplot.tex
documentation/figs/: femo-gp+convexhull.ps  femo-gp+curves.ps  g1.ps  g2.ps  g6.ps  g7.ps  oc-hss-140513.ps  oc-hss-141002.ps
documentationupdate/: makedok3.F90  matsmin-doc01.tex  minpack5.tex  modelpack6.tex  ocdok.tex  pmod25-doc20.tex  tpfun-doc01.tex
documentationupdate/figs/: g1.ps  g2.ps  g3.ps  g4.ps  g5.ps  g6.ps  g7.ps  g8.ps
examples/TQ4lib/: CMakeLists.txt  readme.tex
examples/TQ4lib/Cpp/Scheil/: CMakeLists.txt  Compile_OCASI_win32.bash  Example_OCASI.cpp  input.txt  liboctqisoc.F90  ocasiintf.h
examples/macros/: #map19.OCM#  AlC-OC.TDB  AlC-diagrams.OCM  AlFe-4SLBF.TDB  BEF.TDB  CHO-gas.TDB  MgNaCl.TDB  MgNaClX.TDB  MoRe.TDB  OU.TDB  SGTE-unary1991-2010.TDB  agcu.TDB  all-after-map16.OCM  all-from-map19.OCM  all-from-map4.OCM  all-from-tzero.OCM  all.OCM  allcost.OCM  alni-4slx.TDB  cost507R.TDB  cslaf-excess.TDB  cslaf-map.OCM  cslaf-refs-sro.TDB  hogas.TDB  iron4cd.TDB  map1.OCM  map10.OCM  map11.OCM  map12.OCM  map13.OCM  map14.OCM  map15.OCM  map16.OCM  map17.OCM  map18.OCM  map19.OCM  map2.OCM  map3.OCM  map4.OCM  map5.OCM  (+43 more)
installation/: Install-OC-Linux-or-macOS.tex  Install-OC-Linux.tex  Install-OC-Windows-MinGW.tex  Install-OC-Windows.tex  Makefile-parallel-generic  after-installation.tex
libs/: dummy.txt
macros/: BEF.TDB  CHO-gas.TDB  OU.TDB  agbicupbsbsn  agbicupbsbsn.TDB  agcu.TDB  alcrni-nodis.TDB  all.OCM  allcost.OCM  ccrfe.TDB  cost507R.TDB  crfe.TDB  hogas.OCM  hogas.TDB  map1-agcu.OCM  map1.OCM  map10.OCM  map11.OCM  map12.OCM  map13.OCM  map14.OCM  map15.OCM  map17.OCM  map2-crmo.OCM  map2.OCM  map3-cfe.OCM  map3.OCM  map4-ou.OCM  map4.OCM  map5-femo.OCM  map5.OCM  map6-crfemo.OCM  map6-ss.OCM  map6.OCM  map7-hss.OCM  map7.OCM  map8-feni.OCM  map8.OCM  map9-rew.OCM  map9.OCM  (+51 more)
macros/ocv1/: alcrni-nodis.TDB  all.OCM  oc1ex01A.OCM  oc1ex01B.OCM  oc1ex02C.OCM  steel1.TDB
macros/ocv1-0/: hogas.TDB  oc1ex01C.OCM  oc1ex02A.OCM  oc1ex02B.OCM
macros/ocv2/: all.OCM  hogas.TDB  map1.OCM  map2.OCM  map3.OCM  map4.OCM  map5.OCM  map7.OCM  map8.OCM  map9.OCM  steel1.TDB  step1.OCM  step2.OCM  step3.OCM  step4.OCM  step6.OCM
macros/ocv3/: agcu.TDB  all.OCM  all2.OCM  allcost.OCM  hliq.plt  htest1.OCM  htest2.OCM  map1.OCM  map4.OCM  map5.OCM  map6.OCM  map7.OCM  map8.OCM  map9.OCM  melting.OCM  opttest1.OCM  opttest2.OCM  parallel1.OCM  parallel2.OCM  step1.OCM  step2.OCM  step3.OCM  step4.OCM  step5.OCM  step7.OCM  step8.OCM  unary.OCM
macros/ocv4/: all.OCM  cost507R.TDB  hliq.plt  map1.OCM  map10.OCM  map11.OCM  map12.OCM  map2.OCM  map3.OCM  map4.OCM  map6.OCM  map7.OCM  map8.OCM  melting.OCM  opttest1.OCM  opttest2.OCM  parallel2.OCM  step2.OCM  step4.OCM  step5.OCM  step6.OCM  step8.OCM  testcond1.OCM  unary.OCM
manual/: OC-userguide.tex  ochelp.html  ochelp.tex  ochelp3.tex  ochelp4.tex  ochelp5.html  ochelp5.tex
minimizer/: matsmin.F90  matsmin3.F90
models/: OC-isoC.h  gtp3.F90  gtp3A.F90  gtp3B.F90  gtp3C.F90  gtp3D.F90  gtp3E.F90  gtp3F.F90  gtp3G.F90  gtp3H.F90  gtp3X.F90  gtp3Y.F90  gtp3Z.F90  list-of-subroutines.txt  pmod25.F90  pmod25A.F90  pmod25B.F90  pmod25C.F90  pmod25D.F90  pmod25E.F90  pmod25F.F90  pmod25G.F90  pmod25H.F90  pmod25I.F90  pmod25J.F90
numlib/: hsl2.F90  lmdif1lib.F90  lukasnum.F90  minpack1.F90  oclablas.F90  ocnum.F90
src/: linkocdate.F90  pmain1-save.F90  pmain1.F90
src/minimizer/: matsmin.F90
src/models/: OC-isoC.h  gtp3.F90  gtp3A.F90  gtp3B.F90  gtp3C.F90  gtp3D.F90  gtp3E.F90  gtp3EN.F90  gtp3EX.F90  gtp3EY.F90  gtp3F.F90  gtp3G.F90  gtp3H.F90  gtp3X.F90  gtp3XQ.F90  gtp3Y.F90  gtp3Z.F90  gtp3_dd1.F90  gtp3_dd2.F90  gtp3_xml.F90  ocparam.F90  pmon6.F90
src/numlib/: minpack1.F90  oclablas.F90  ocnum.F90
src/stepmapplot/: smp2.F90  smp2A.F90  smp2B.F90
src/userif/: pmon6.F90
src/utilities/: metlib4.F90
stepmapplot/: smp1.F90  smp2.F90  smp2A.F90  smp2B.F90  smp3.F90
userif/: pmon6.F90
utilities/: metlib3.F90  metlib4.F90  tpfun4.F90
utilities/GETKEY/: M_getkey+testprogram.F90  M_getkey.F90  Makefile  Why-and-Howto-install-getkey.tex  getkey.c  (+2 more)
(+110 files in other folders)
